--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,36 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1e3b8200",
+   "execution_count": null,
+   "id": "635ccaed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"hello world!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d177e858",
+   "execution_count": null,
+   "id": "26320750",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python 3.10.14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python --version"
    ]
@@ -39,10 +23,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcabe47d",
+   "id": "ba695fb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!docker pullfrom sagemaker import image_uris\n",
+    "image_uris.retrieve(framework='tensorflow',region='us-east-1',version='1.12.0',image_scope='inference',instance_type='ml.c5.4xlarge')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4c233b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker import image_uris\n",
+    "image_uris.retrieve(framework='tensorflow',region='us-east-1',version='1.12.0',image_scope='inference',instance_type='ml.c5.4xlarge')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0460441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 520713654638.dkr.ecr.us-east-1.amazonaws.com\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7792979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker pull 520713654638.dkr.ecr.us-east-1.amazonaws.com/sagemaker-tensorflow-serving:1.12.0-cpu\n"
+   ]
   }
  ],
  "metadata": {
